# dockerfile-django

./: .gitignore  README.md  gdf.py  pyproject.toml
.github/workflows/: ci.yml  linters.yml
dockerfile_django/: __main__.py  main.py  utils.py
dockerfile_django/templates/: Dockerfile.jinja
templates/: Dockerfile.jinja
tests/: test_database.py  test_dependency_manager_package.py  test_dockerfile_abort.py  test_dockerfile_django.py  test_dockerfile_generate.py  utils.py
tests/test_cases/collectstatic/collectstatic/: Dockerfile
tests/test_cases/collectstatic/collectstatic/collectstatic_app/: settings.py
tests/test_cases/collectstatic/collectstatic_random_secret_key/: Dockerfile
tests/test_cases/collectstatic/collectstatic_random_secret_key/collectstatic_random_secret_key_app/: settings.py
tests/test_cases/collectstatic/no_collectstatic/: Dockerfile
tests/test_cases/database/postgres/: Dockerfile
tests/test_cases/database/sqlite/: Dockerfile
tests/test_cases/default_config/all_default_config/: Dockerfile  pyproject.toml
tests/test_cases/dependency_manager_package/pip/: Dockerfile
tests/test_cases/dependency_manager_package/pipenv/: Dockerfile
tests/test_cases/dependency_manager_package/poetry/: Dockerfile
tests/test_cases/dockerfile_generated/scenario_1/: Dockerfile
tests/test_cases/dockerfile_generated/scenario_2/: Dockerfile
tests/test_cases/server/daphne/: Dockerfile  requirements.txt
tests/test_cases/server/granian/: Dockerfile  requirements.txt
tests/test_cases/server/gunicorn/: Dockerfile
tests/test_cases/server/hypercorn/: Dockerfile  requirements.txt
tests/test_cases/server/uvicorn/: Dockerfile  requirements.txt
tests/test_cases/server_type/asgi/: Dockerfile
tests/test_cases/server_type/wsgi/: Dockerfile
tests/test_cases/server_type/wsgi_asgi/: Dockerfile
tests/test_cases/settings/production_settings/: Dockerfile
tests/test_cases/settings/settings/: Dockerfile
(+2 files in other folders)
