[tool.poetry]
name = "dockerfile-django"
version = "0.1.0"
description = "Dockerfile Generator for Django apps."
authors = ["Kátia Nakamura <me@katia.dev>"]
readme = "README.md"

[tool.poetry.scripts]
dockerfile-django = "dockerfile_django.main:cli"

[tool.poetry.dependencies]
python = "^3.7"
typer = {extras = ["all"], version = "^0.12.3"}
jinja2 = "^3.1.3"
markupsafe = "^2.1.5"
pydantic = "2.5.3"

[tool.poetry.group.dev.dependencies]
pytest = "7.4.4"
black = "23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
